responsive overflow fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital@0;1&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700&display=swap');
 #root {
+    overflow-x: hidden;
+    /* Unnecessary IMHO, uncomment next line to force hidden behavior */
+    /* overflow-x: hidden !important; */
+    /* Additional tunning proposed by the community */
+    position: relative;
+    width: 100%;
   /* width:100%;
   height: 100%; */
 }
